Array Deque and started brute force